5.1.1

FIXES
    - Revert debug code showing default bags at the bank :) oops


5.1.0

NEW
    - Added itemlevel and itemborder quality to equipment selection
    - Overhaul bank & bags to fix a number of issues (#206, #188)
    - Bag and character frames now "raise" on interaction

FIXES
    - Fixed lua error in achievement tracking
    - Fixed multiple secure handler and in-combat issues with the micromenu
    - Fixed getting an "empty UI" after visiting the bank and then zoning


5.0.27

NEW
    - Added Reward Tooltip to WorldQuests
    - Added threat text on target
    - Added FPS to Minimap
    - Added durability icon to character stats
    - Added scrollbar to titles
    - Added raid info to Hero window -> curreny tab
    - Added dungeon difficulty to minimap

FIXES
    - Fixed bag close button not working at bank, vendor or mailbox
    - Multiple tweaks to issues in target, unit, and focus frame behaviors
    - Improve HUD performance in certain cases with event filtering
    - Fixed achievement criteria not tracked correctly

MISCELLANEOUS
    - Paladin beacons use the same indicator slot, and colors now match their spell icon colors
    - Added indicator for "Glimmer of Light"


5.0.26

NEW
    - Track reputation while under max level
    - Added new zones' reputation images

FIXES
    - Resolve texture masking issue on health globe spark

MISCELLANEOUS
    - Changed Click and Shift-Click for local und server time


5.0.25

FIXES
    - Fix errors in bag and bank resizing
    - Play nicely with WarfrontRareTracker addon


5.0.24

FIXES
    - Fixed Lua error when open Bags/Banks after moving
    - Heart of Azeroth can now be opend from the hero window


5.0.23

Update for Patch 8.2.0


5.0.22

NEW
    - Added ignoring auras by shift+right clicking on them
    - Added option to hide raid aura tooltips (and disable ignoring by shift+right clicking) while in combat
    - Added a tooltip showing money of characters on the same faction+realm to the bag money text